return frontend edits back to backend
